--- a/package.yaml
+++ b/package.yaml
@@ -5,6 +5,8 @@ description: Emulator for the 6502 CPU.
 dependencies:
 - base >= 4.7 && < 5
 - listsafe
+- transformers
+- exceptions
 
 library:
   source-dirs: src
