--- a/package.yaml
+++ b/package.yaml
@@ -4,6 +4,7 @@ description: Emulator for the 6502 CPU.
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
 - listsafe
 - transformers
 - exceptions
@@ -12,6 +13,7 @@ library:
   source-dirs: src
   exposed-modules:
   - CPU
+  - Bus
   - Instruction
   - Computer
 
